--- a/Documentation/latex/classClassDetails.tex
+++ b/Documentation/latex/classClassDetails.tex
@@ -1,19 +1,21 @@
-\hypertarget{classPageLayout}{\section{Page\-Layout Class Reference}
-\label{classPageLayout}\index{Page\-Layout@{Page\-Layout}}
+\hypertarget{classClassDetails}{\section{Class\-Details Class Reference}
+\label{classClassDetails}\index{Class\-Details@{Class\-Details}}
 }
 
 
-{\ttfamily \#include $<$pagelayout.\-h$>$}
+{\ttfamily \#include $<$classdetails.\-h$>$}
 
-Inheritance diagram for Page\-Layout\-:\begin{figure}[H]
+Inheritance diagram for Class\-Details\-:\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=3.000000cm]{classPageLayout}
+\includegraphics[height=3.000000cm]{classClassDetails}
 \end{center}
 \end{figure}
 \subsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
+\hyperlink{classClassDetails_af8fb7a92c63d62a03a60c47476f4523a}{Class\-Details} ()
+\begin{DoxyCompactList}\small\item\em Constructor. \end{DoxyCompactList}\item 
 \hyperlink{classPageLayout_af085725aaa6c01595565797c9f205173}{Page\-Layput} ()
 \item 
 void \hyperlink{classPageLayout_a7726061f0653245f644a05807fa92472}{Header} ()
@@ -117,19 +119,33 @@ string \hyperlink{classHTMLTags_ae987289d0dab2e3e234048615f930d0f}{start\-H1}
 \subsection{Detailed Description}
 
 
- \subsubsection*{Include required header files}
+ \subsubsection*{Include Required Header Files}
 
 
 
- Class\-: \hyperlink{classPageLayout}{Page\-Layout} \-: public \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \subsection*{Description\-: For adding header and footer to page}
+ Class\-: \hyperlink{classClassDetails}{Class\-Details} Description\-: This class is used to get details of class from user. Like class name, total classes, subject \subsection*{details etc.}
 
-Definition at line 33 of file pagelayout.\-h.
+Definition at line 39 of file classdetails.\-h.
+
+
+
+\subsection{Constructor \& Destructor Documentation}
+\hypertarget{classClassDetails_af8fb7a92c63d62a03a60c47476f4523a}{\index{Class\-Details@{Class\-Details}!Class\-Details@{Class\-Details}}
+\index{Class\-Details@{Class\-Details}!ClassDetails@{Class\-Details}}
+\subsubsection[{Class\-Details}]{\setlength{\rightskip}{0pt plus 5cm}Class\-Details\-::\-Class\-Details (
+\begin{DoxyParamCaption}
+{}
+\end{DoxyParamCaption}
+)}}\label{classClassDetails_af8fb7a92c63d62a03a60c47476f4523a}
+
+
+Constructor. 
 
 
 
 \subsection{Member Function Documentation}
-\hypertarget{classHTMLTags_a7cae36bd3a0e6f35e89494e5cda64971}{\index{Page\-Layout@{Page\-Layout}!Body\-End@{Body\-End}}
-\index{Body\-End@{Body\-End}!PageLayout@{Page\-Layout}}
+\hypertarget{classHTMLTags_a7cae36bd3a0e6f35e89494e5cda64971}{\index{Class\-Details@{Class\-Details}!Body\-End@{Body\-End}}
+\index{Body\-End@{Body\-End}!ClassDetails@{Class\-Details}}
 \subsubsection[{Body\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Body\-End (
 \begin{DoxyParamCaption}
 {}
@@ -145,8 +161,8 @@ Display $<$/\-B\-O\-D\-Y$>$
 
 Definition at line 172 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_af1fb7b90b9ebb83177da18aba1ef86a9}{\index{Page\-Layout@{Page\-Layout}!Body\-Start@{Body\-Start}}
-\index{Body\-Start@{Body\-Start}!PageLayout@{Page\-Layout}}
+\hypertarget{classHTMLTags_af1fb7b90b9ebb83177da18aba1ef86a9}{\index{Class\-Details@{Class\-Details}!Body\-Start@{Body\-Start}}
+\index{Body\-Start@{Body\-Start}!ClassDetails@{Class\-Details}}
 \subsubsection[{Body\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Body\-Start (
 \begin{DoxyParamCaption}
 {}
@@ -162,8 +178,8 @@ Display $<$\-B\-O\-D\-Y$>$
 
 Definition at line 159 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_ab6dbb027d808e7b708a4ece7e911ceee}{\index{Page\-Layout@{Page\-Layout}!Button@{Button}}
-\index{Button@{Button}!PageLayout@{Page\-Layout}}
+\hypertarget{classHTMLTags_ab6dbb027d808e7b708a4ece7e911ceee}{\index{Class\-Details@{Class\-Details}!Button@{Button}}
+\index{Button@{Button}!ClassDetails@{Class\-Details}}
 \subsubsection[{Button}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Button (
 \begin{DoxyParamCaption}
 \item[{string}]{id, }
@@ -182,8 +198,8 @@ Button.
 
 Definition at line 340 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a4e9e18580cc7f2b82c82e4f81e39be50}{\index{Page\-Layout@{Page\-Layout}!C\-S\-S@{C\-S\-S}}
-\index{C\-S\-S@{C\-S\-S}!PageLayout@{Page\-Layout}}
+\hypertarget{classHTMLTags_a4e9e18580cc7f2b82c82e4f81e39be50}{\index{Class\-Details@{Class\-Details}!C\-S\-S@{C\-S\-S}}
+\index{C\-S\-S@{C\-S\-S}!ClassDetails@{Class\-Details}}
 \subsubsection[{C\-S\-S}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-C\-S\-S (
 \begin{DoxyParamCaption}
 \item[{string}]{href}
@@ -199,8 +215,8 @@ Add External C\-S\-S.
 
 Definition at line 131 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_aa82b2d3d85b3afd29e5641dbe1ace439}{\index{Page\-Layout@{Page\-Layout}!Div\-End@{Div\-End}}
-\index{Div\-End@{Div\-End}!PageLayout@{Page\-Layout}}
+\hypertarget{classHTMLTags_aa82b2d3d85b3afd29e5641dbe1ace439}{\index{Class\-Details@{Class\-Details}!Div\-End@{Div\-End}}
+\index{Div\-End@{Div\-End}!ClassDetails@{Class\-Details}}
 \subsubsection[{Div\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Div\-End (
 \begin{DoxyParamCaption}
 {}
@@ -216,8 +232,8 @@ End div section.
 
 Definition at line 199 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a897512b202cfd12729e8fa24e67ea4d6}{\index{Page\-Layout@{Page\-Layout}!Div\-Start@{Div\-Start}}
-\index{Div\-Start@{Div\-Start}!PageLayout@{Page\-Layout}}
+\hypertarget{classHTMLTags_a897512b202cfd12729e8fa24e67ea4d6}{\index{Class\-Details@{Class\-Details}!Div\-Start@{Div\-Start}}
+\index{Div\-Start@{Div\-Start}!ClassDetails@{Class\-Details}}
 \subsubsection[{Div\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Div\-Start (
 \begin{DoxyParamCaption}
 \item[{string}]{id, }
@@ -234,13 +250,13 @@ Start Div Section.
 
 Definition at line 185 of file htmltags.\-cc.
 
-\hypertarget{classPageLayout_a68aa868a8868b12964f161838b5f814c}{\index{Page\-Layout@{Page\-Layout}!Footer@{Footer}}
-\index{Footer@{Footer}!PageLayout@{Page\-Layout}}
+\hypertarget{classPageLayout_a68aa868a8868b12964f161838b5f814c}{\index{Class\-Details@{Class\-Details}!Footer@{Footer}}
+\index{Footer@{Footer}!ClassDetails@{Class\-Details}}
 \subsubsection[{Footer}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Layout\-::\-Footer (
 \begin{DoxyParamCaption}
 {}
 \end{DoxyParamCaption}
-)}}\label{classPageLayout_a68aa868a8868b12964f161838b5f814c}
+)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classPageLayout_a68aa868a8868b12964f161838b5f814c}
 Footer Section of Page
 
 
@@ -249,8 +265,8 @@ Footer Section of Page
 
 Definition at line 104 of file pagelayout.\-cc.
 
-\hypertarget{classHTMLTags_ab57baef28db9590ce59d0e2f403a210f}{\index{Page\-Layout@{Page\-Layout}!Form\-End@{Form\-End}}
-\index{Form\-End@{Form\-End}!PageLayout@{Page\-Layout}}
+\hypertarget{classHTMLTags_ab57baef28db9590ce59d0e2f403a210f}{\index{Class\-Details@{Class\-Details}!Form\-End@{Form\-End}}
+\index{Form\-End@{Form\-End}!ClassDetails@{Class\-Details}}
 \subsubsection[{Form\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Form\-End (
 \begin{DoxyParamCaption}
 {}
@@ -266,8 +282,8 @@ End Form.
 
 Definition at line 227 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a1489ccf4629069eca5e550eeb8e8e887}{\index{Page\-Layout@{Page\-Layout}!Form\-Start@{Form\-Start}}
-\index{Form\-Start@{Form\-Start}!PageLayout@{Page\-Layout}}
+\hypertarget{classHTMLTags_a1489ccf4629069eca5e550eeb8e8e887}{\index{Class\-Details@{Class\-Details}!Form\-Start@{Form\-Start}}
+\index{Form\-Start@{Form\-Start}!ClassDetails@{Class\-Details}}
 \subsubsection[{Form\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Form\-Start (
 \begin{DoxyParamCaption}
 \item[{string}]{name, }
@@ -285,8 +301,8 @@ Start Form.
 
 Definition at line 213 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_afdc779e46fac16cc79e4f0e87f621254}{\index{Page\-Layout@{Page\-Layout}!Head\-End@{Head\-End}}
-\index{Head\-End@{Head\-End}!PageLayout@{Page\-Layout}}
+\hypertarget{classHTMLTags_afdc779e46fac16cc79e4f0e87f621254}{\index{Class\-Details@{Class\-Details}!Head\-End@{Head\-End}}
+\index{Head\-End@{Head\-End}!ClassDetails@{Class\-Details}}
 \subsubsection[{Head\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Head\-End (
 \begin{DoxyParamCaption}
 {}
@@ -302,13 +318,13 @@ Display $<$/\-H\-E\-A\-D$>$
 
 Definition at line 105 of file htmltags.\-cc.
 
-\hypertarget{classPageLayout_a7726061f0653245f644a05807fa92472}{\index{Page\-Layout@{Page\-Layout}!Header@{Header}}
-\index{Header@{Header}!PageLayout@{Page\-Layout}}
+\hypertarget{classPageLayout_a7726061f0653245f644a05807fa92472}{\index{Class\-Details@{Class\-Details}!Header@{Header}}
+\index{Header@{Header}!ClassDetails@{Class\-Details}}
 \subsubsection[{Header}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Layout\-::\-Header (
 \begin{DoxyParamCaption}
 {}
 \end{DoxyParamCaption}
-)}}\label{classPageLayout_a7726061f0653245f644a05807fa92472}
+)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classPageLayout_a7726061f0653245f644a05807fa92472}
 Header Section of Page
 
 
@@ -317,8 +333,8 @@ Header Section of Page
 
 Definition at line 88 of file pagelayout.\-cc.
 
-\hypertarget{classHTMLTags_af2b01cc08884af52e0b291d07035062e}{\index{Page\-Layout@{Page\-Layout}!Head\-Start@{Head\-Start}}
-\index{Head\-Start@{Head\-Start}!PageLayout@{Page\-Layout}}
+\hypertarget{classHTMLTags_af2b01cc08884af52e0b291d07035062e}{\index{Class\-Details@{Class\-Details}!Head\-Start@{Head\-Start}}
+\index{Head\-Start@{Head\-Start}!ClassDetails@{Class\-Details}}
 \subsubsection[{Head\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Head\-Start (
 \begin{DoxyParamCaption}
 {}
@@ -330,8 +346,8 @@ Definition at line 88 of file pagelayout.\-cc.
 
 Definition at line 92 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a6553c3d01ee194a1d157e6341333dee3}{\index{Page\-Layout@{Page\-Layout}!H\-T\-M\-L\-End@{H\-T\-M\-L\-End}}
-\index{H\-T\-M\-L\-End@{H\-T\-M\-L\-End}!PageLayout@{Page\-Layout}}
+\hypertarget{classHTMLTags_a6553c3d01ee194a1d157e6341333dee3}{\index{Class\-Details@{Class\-Details}!H\-T\-M\-L\-End@{H\-T\-M\-L\-End}}
+\index{H\-T\-M\-L\-End@{H\-T\-M\-L\-End}!ClassDetails@{Class\-Details}}
 \subsubsection[{H\-T\-M\-L\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-H\-T\-M\-L\-End (
 \begin{DoxyParamCaption}
 {}
@@ -347,8 +363,8 @@ Display $<$/\-H\-T\-M\-L$>$
 
 Definition at line 79 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a567551cd701d2836d4240b2917b5e13f}{\index{Page\-Layout@{Page\-Layout}!H\-T\-M\-L\-Start@{H\-T\-M\-L\-Start}}
-\index{H\-T\-M\-L\-Start@{H\-T\-M\-L\-Start}!PageLayout@{Page\-Layout}}
+\hypertarget{classHTMLTags_a567551cd701d2836d4240b2917b5e13f}{\index{Class\-Details@{Class\-Details}!H\-T\-M\-L\-Start@{H\-T\-M\-L\-Start}}
+\index{H\-T\-M\-L\-Start@{H\-T\-M\-L\-Start}!ClassDetails@{Class\-Details}}
 \subsubsection[{H\-T\-M\-L\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-H\-T\-M\-L\-Start (
 \begin{DoxyParamCaption}
 {}
@@ -364,8 +380,8 @@ Display $<$\-H\-T\-M\-L$>$
 
 Definition at line 66 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_ab515d13346f63b00f7696374e682344e}{\index{Page\-Layout@{Page\-Layout}!Input\-Field@{Input\-Field}}
-\index{Input\-Field@{Input\-Field}!PageLayout@{Page\-Layout}}
+\hypertarget{classHTMLTags_ab515d13346f63b00f7696374e682344e}{\index{Class\-Details@{Class\-Details}!Input\-Field@{Input\-Field}}
+\index{Input\-Field@{Input\-Field}!ClassDetails@{Class\-Details}}
 \subsubsection[{Input\-Field}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Input\-Field (
 \begin{DoxyParamCaption}
 \item[{string}]{type, }
@@ -383,8 +399,8 @@ Input Field.
 
 Definition at line 269 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_aea041d720f12a210615c95350774e6aa}{\index{Page\-Layout@{Page\-Layout}!Javascript@{Javascript}}
-\index{Javascript@{Javascript}!PageLayout@{Page\-Layout}}
+\hypertarget{classHTMLTags_aea041d720f12a210615c95350774e6aa}{\index{Class\-Details@{Class\-Details}!Javascript@{Javascript}}
+\index{Javascript@{Javascript}!ClassDetails@{Class\-Details}}
 \subsubsection[{Javascript}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Javascript (
 \begin{DoxyParamCaption}
 \item[{string}]{src}
@@ -400,13 +416,13 @@ Add Javascript File.
 
 Definition at line 146 of file htmltags.\-cc.
 
-\hypertarget{classPageLayout_ae60235c6af48e3ebbc6343d02456da0c}{\index{Page\-Layout@{Page\-Layout}!Logo@{Logo}}
-\index{Logo@{Logo}!PageLayout@{Page\-Layout}}
+\hypertarget{classPageLayout_ae60235c6af48e3ebbc6343d02456da0c}{\index{Class\-Details@{Class\-Details}!Logo@{Logo}}
+\index{Logo@{Logo}!ClassDetails@{Class\-Details}}
 \subsubsection[{Logo}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Layout\-::\-Logo (
 \begin{DoxyParamCaption}
 \item[{string}]{logo\-Name}
 \end{DoxyParamCaption}
-)}}\label{classPageLayout_ae60235c6af48e3ebbc6343d02456da0c}
+)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classPageLayout_ae60235c6af48e3ebbc6343d02456da0c}
 Logo on Page
 
 
@@ -415,13 +431,13 @@ Logo on Page
 
 Definition at line 73 of file pagelayout.\-cc.
 
-\hypertarget{classPageLayout_a49af1dca286bbee9432192a7b3c00332}{\index{Page\-Layout@{Page\-Layout}!Menu@{Menu}}
-\index{Menu@{Menu}!PageLayout@{Page\-Layout}}
+\hypertarget{classPageLayout_a49af1dca286bbee9432192a7b3c00332}{\index{Class\-Details@{Class\-Details}!Menu@{Menu}}
+\index{Menu@{Menu}!ClassDetails@{Class\-Details}}
 \subsubsection[{Menu}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Layout\-::\-Menu (
 \begin{DoxyParamCaption}
 {}
 \end{DoxyParamCaption}
-)}}\label{classPageLayout_a49af1dca286bbee9432192a7b3c00332}
+)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classPageLayout_a49af1dca286bbee9432192a7b3c00332}
 List/\-Menu Navigation()
 
 
@@ -430,15 +446,15 @@ List/\-Menu Navigation()
 
 Definition at line 50 of file pagelayout.\-cc.
 
-\hypertarget{classPageLayout_af085725aaa6c01595565797c9f205173}{\index{Page\-Layout@{Page\-Layout}!Page\-Layput@{Page\-Layput}}
-\index{Page\-Layput@{Page\-Layput}!PageLayout@{Page\-Layout}}
+\hypertarget{classPageLayout_af085725aaa6c01595565797c9f205173}{\index{Class\-Details@{Class\-Details}!Page\-Layput@{Page\-Layput}}
+\index{Page\-Layput@{Page\-Layput}!ClassDetails@{Class\-Details}}
 \subsubsection[{Page\-Layput}]{\setlength{\rightskip}{0pt plus 5cm}Page\-Layout\-::\-Page\-Layput (
 \begin{DoxyParamCaption}
 {}
 \end{DoxyParamCaption}
-)}}\label{classPageLayout_af085725aaa6c01595565797c9f205173}
-Constructor \hypertarget{classHTMLTags_adde967a90e03f4b5168b9bffd319980b}{\index{Page\-Layout@{Page\-Layout}!Select\-Field\-End@{Select\-Field\-End}}
-\index{Select\-Field\-End@{Select\-Field\-End}!PageLayout@{Page\-Layout}}
+)\hspace{0.3cm}{\ttfamily [inherited]}}}\label{classPageLayout_af085725aaa6c01595565797c9f205173}
+Constructor \hypertarget{classHTMLTags_adde967a90e03f4b5168b9bffd319980b}{\index{Class\-Details@{Class\-Details}!Select\-Field\-End@{Select\-Field\-End}}
+\index{Select\-Field\-End@{Select\-Field\-End}!ClassDetails@{Class\-Details}}
 \subsubsection[{Select\-Field\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Select\-Field\-End (
 \begin{DoxyParamCaption}
 {}
@@ -454,8 +470,8 @@ End Select Field.
 
 Definition at line 296 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_adb6e7ef0a1320dbf6d4acbe1ea3e418f}{\index{Page\-Layout@{Page\-Layout}!Select\-Field\-Start@{Select\-Field\-Start}}
-\index{Select\-Field\-Start@{Select\-Field\-Start}!PageLayout@{Page\-Layout}}
+\hypertarget{classHTMLTags_adb6e7ef0a1320dbf6d4acbe1ea3e418f}{\index{Class\-Details@{Class\-Details}!Select\-Field\-Start@{Select\-Field\-Start}}
+\index{Select\-Field\-Start@{Select\-Field\-Start}!ClassDetails@{Class\-Details}}
 \subsubsection[{Select\-Field\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Select\-Field\-Start (
 \begin{DoxyParamCaption}
 \item[{string}]{name}
@@ -471,8 +487,8 @@ Select Field Start.
 
 Definition at line 283 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_ae312980d20e3dea0469fdcb730fb975e}{\index{Page\-Layout@{Page\-Layout}!Select\-Option\-End@{Select\-Option\-End}}
-\index{Select\-Option\-End@{Select\-Option\-End}!PageLayout@{Page\-Layout}}
+\hypertarget{classHTMLTags_ae312980d20e3dea0469fdcb730fb975e}{\index{Class\-Details@{Class\-Details}!Select\-Option\-End@{Select\-Option\-End}}
+\index{Select\-Option\-End@{Select\-Option\-End}!ClassDetails@{Class\-Details}}
 \subsubsection[{Select\-Option\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Select\-Option\-End (
 \begin{DoxyParamCaption}
 {}
@@ -488,8 +504,8 @@ Selct Option End.
 
 Definition at line 326 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a09f91c8601aed3aa2d0978123225afaa}{\index{Page\-Layout@{Page\-Layout}!Select\-Option\-Start@{Select\-Option\-Start}}
-\index{Select\-Option\-Start@{Select\-Option\-Start}!PageLayout@{Page\-Layout}}
+\hypertarget{classHTMLTags_a09f91c8601aed3aa2d0978123225afaa}{\index{Class\-Details@{Class\-Details}!Select\-Option\-Start@{Select\-Option\-Start}}
+\index{Select\-Option\-Start@{Select\-Option\-Start}!ClassDetails@{Class\-Details}}
 \subsubsection[{Select\-Option\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Select\-Option\-Start (
 \begin{DoxyParamCaption}
 \item[{string}]{value}
@@ -505,8 +521,8 @@ Select Option Start.
 
 Definition at line 310 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_abe32ec84b6b2940afbc993be2db178e9}{\index{Page\-Layout@{Page\-Layout}!Set\-H\-T\-M\-L\-Variables@{Set\-H\-T\-M\-L\-Variables}}
-\index{Set\-H\-T\-M\-L\-Variables@{Set\-H\-T\-M\-L\-Variables}!PageLayout@{Page\-Layout}}
+\hypertarget{classHTMLTags_abe32ec84b6b2940afbc993be2db178e9}{\index{Class\-Details@{Class\-Details}!Set\-H\-T\-M\-L\-Variables@{Set\-H\-T\-M\-L\-Variables}}
+\index{Set\-H\-T\-M\-L\-Variables@{Set\-H\-T\-M\-L\-Variables}!ClassDetails@{Class\-Details}}
 \subsubsection[{Set\-H\-T\-M\-L\-Variables}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Set\-H\-T\-M\-L\-Variables (
 \begin{DoxyParamCaption}
 {}
@@ -522,8 +538,8 @@ Assingn Values to variables.
 
 Definition at line 42 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a0655d9f70a8c1a61c406280d8fb9df7a}{\index{Page\-Layout@{Page\-Layout}!Table\-End@{Table\-End}}
-\index{Table\-End@{Table\-End}!PageLayout@{Page\-Layout}}
+\hypertarget{classHTMLTags_a0655d9f70a8c1a61c406280d8fb9df7a}{\index{Class\-Details@{Class\-Details}!Table\-End@{Table\-End}}
+\index{Table\-End@{Table\-End}!ClassDetails@{Class\-Details}}
 \subsubsection[{Table\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Table\-End (
 \begin{DoxyParamCaption}
 {}
@@ -539,8 +555,8 @@ End Table.
 
 Definition at line 254 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a9d4bc37c7d615bc1d7f7c738dae48ad3}{\index{Page\-Layout@{Page\-Layout}!Table\-Start@{Table\-Start}}
-\index{Table\-Start@{Table\-Start}!PageLayout@{Page\-Layout}}
+\hypertarget{classHTMLTags_a9d4bc37c7d615bc1d7f7c738dae48ad3}{\index{Class\-Details@{Class\-Details}!Table\-Start@{Table\-Start}}
+\index{Table\-Start@{Table\-Start}!ClassDetails@{Class\-Details}}
 \subsubsection[{Table\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Table\-Start (
 \begin{DoxyParamCaption}
 \item[{string}]{id, }
@@ -557,8 +573,8 @@ Start Table.
 
 Definition at line 240 of file htmltags.\-cc.
 
-\hypertarget{classHTMLTags_a5128d6f1c6be5ac1689047fc9d0d159f}{\index{Page\-Layout@{Page\-Layout}!Title@{Title}}
-\index{Title@{Title}!PageLayout@{Page\-Layout}}
+\hypertarget{classHTMLTags_a5128d6f1c6be5ac1689047fc9d0d159f}{\index{Class\-Details@{Class\-Details}!Title@{Title}}
+\index{Title@{Title}!ClassDetails@{Class\-Details}}
 \subsubsection[{Title}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Title (
 \begin{DoxyParamCaption}
 \item[{string}]{page\-Title}
@@ -577,15 +593,15 @@ Definition at line 118 of file htmltags.\-cc.
 
 
 \subsection{Member Data Documentation}
-\hypertarget{classPageLayout_a8a3c1ddc422df2556fbc95d0cd575a05}{\index{Page\-Layout@{Page\-Layout}!project\-Name@{project\-Name}}
-\index{project\-Name@{project\-Name}!PageLayout@{Page\-Layout}}
-\subsubsection[{project\-Name}]{\setlength{\rightskip}{0pt plus 5cm}string Page\-Layout\-::project\-Name\hspace{0.3cm}{\ttfamily [protected]}}}\label{classPageLayout_a8a3c1ddc422df2556fbc95d0cd575a05}
+\hypertarget{classPageLayout_a8a3c1ddc422df2556fbc95d0cd575a05}{\index{Class\-Details@{Class\-Details}!project\-Name@{project\-Name}}
+\index{project\-Name@{project\-Name}!ClassDetails@{Class\-Details}}
+\subsubsection[{project\-Name}]{\setlength{\rightskip}{0pt plus 5cm}string Page\-Layout\-::project\-Name\hspace{0.3cm}{\ttfamily [protected]}, {\ttfamily [inherited]}}}\label{classPageLayout_a8a3c1ddc422df2556fbc95d0cd575a05}
 Project Name = Ba\-Ka\-Plan 
 
 Definition at line 37 of file pagelayout.\-h.
 
-\hypertarget{classHTMLTags_ae987289d0dab2e3e234048615f930d0f}{\index{Page\-Layout@{Page\-Layout}!start\-H1@{start\-H1}}
-\index{start\-H1@{start\-H1}!PageLayout@{Page\-Layout}}
+\hypertarget{classHTMLTags_ae987289d0dab2e3e234048615f930d0f}{\index{Class\-Details@{Class\-Details}!start\-H1@{start\-H1}}
+\index{start\-H1@{start\-H1}!ClassDetails@{Class\-Details}}
 \subsubsection[{start\-H1}]{\setlength{\rightskip}{0pt plus 5cm}string H\-T\-M\-L\-Tags\-::start\-H1\hspace{0.3cm}{\ttfamily [protected]}, {\ttfamily [inherited]}}}\label{classHTMLTags_ae987289d0dab2e3e234048615f930d0f}
 
 
@@ -601,7 +617,6 @@ Definition at line 36 of file htmltags.\-h.
 
 
 
-The documentation for this class was generated from the following files\-:\begin{DoxyCompactItemize}
+The documentation for this class was generated from the following file\-:\begin{DoxyCompactItemize}
 \item 
-src/pagelayout.\-h\item 
-src/pagelayout.\-cc\end{DoxyCompactItemize}
+src/classdetails.\-h\end{DoxyCompactItemize}
