--- a/Documentation/latex/classHTMLTags.tex
+++ b/Documentation/latex/classHTMLTags.tex
@@ -8,31 +8,99 @@
 Inheritance diagram for H\-T\-M\-L\-Tags\-:\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=2.000000cm]{classHTMLTags}
+\includegraphics[height=3.000000cm]{classHTMLTags}
 \end{center}
 \end{figure}
 \subsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
 \hyperlink{classHTMLTags_a4f0bb4f538b87033b574ff05798eb60b}{H\-T\-M\-L\-Tags} ()
-\item 
+\begin{DoxyCompactList}\small\item\em Constructor. \end{DoxyCompactList}\item 
+void \hyperlink{classHTMLTags_abe32ec84b6b2940afbc993be2db178e9}{Set\-H\-T\-M\-L\-Variables} ()
+\begin{DoxyCompactList}\small\item\em Assingn Values to variables. \end{DoxyCompactList}\item 
 void \hyperlink{classHTMLTags_a567551cd701d2836d4240b2917b5e13f}{H\-T\-M\-L\-Start} ()
-\item 
+\begin{DoxyCompactList}\small\item\em Display $<$\-H\-T\-M\-L$>$ \end{DoxyCompactList}\item 
 void \hyperlink{classHTMLTags_a6553c3d01ee194a1d157e6341333dee3}{H\-T\-M\-L\-End} ()
-\item 
+\begin{DoxyCompactList}\small\item\em Display $<$/\-H\-T\-M\-L$>$ \end{DoxyCompactList}\item 
 void \hyperlink{classHTMLTags_af2b01cc08884af52e0b291d07035062e}{Head\-Start} ()
 \item 
 void \hyperlink{classHTMLTags_afdc779e46fac16cc79e4f0e87f621254}{Head\-End} ()
-\item 
+\begin{DoxyCompactList}\small\item\em Display $<$/\-H\-E\-A\-D$>$ \end{DoxyCompactList}\item 
 void \hyperlink{classHTMLTags_a5128d6f1c6be5ac1689047fc9d0d159f}{Title} (string page\-Title)
-\item 
+\begin{DoxyCompactList}\small\item\em Display $<$\-T\-I\-T\-L\-E$>$ $<$/\-T\-I\-T\-L\-E$>$ \end{DoxyCompactList}\item 
 void \hyperlink{classHTMLTags_a4e9e18580cc7f2b82c82e4f81e39be50}{C\-S\-S} (string href)
-\item 
+\begin{DoxyCompactList}\small\item\em Add External C\-S\-S. \end{DoxyCompactList}\item 
 void \hyperlink{classHTMLTags_aea041d720f12a210615c95350774e6aa}{Javascript} (string src)
-\item 
+\begin{DoxyCompactList}\small\item\em Add Javascript File. \end{DoxyCompactList}\item 
 void \hyperlink{classHTMLTags_af1fb7b90b9ebb83177da18aba1ef86a9}{Body\-Start} ()
-\item 
+\begin{DoxyCompactList}\small\item\em Display $<$\-B\-O\-D\-Y$>$ \end{DoxyCompactList}\item 
 void \hyperlink{classHTMLTags_a7cae36bd3a0e6f35e89494e5cda64971}{Body\-End} ()
+\begin{DoxyCompactList}\small\item\em Display $<$/\-B\-O\-D\-Y$>$ \end{DoxyCompactList}\item 
+void \hyperlink{classHTMLTags_a897512b202cfd12729e8fa24e67ea4d6}{Div\-Start} (string id, string class\-Name)
+\begin{DoxyCompactList}\small\item\em Start Div Section. \end{DoxyCompactList}\item 
+void \hyperlink{classHTMLTags_aa82b2d3d85b3afd29e5641dbe1ace439}{Div\-End} ()
+\begin{DoxyCompactList}\small\item\em End div section. \end{DoxyCompactList}\item 
+void \hyperlink{classHTMLTags_a1489ccf4629069eca5e550eeb8e8e887}{Form\-Start} (string name, string action, string method)
+\begin{DoxyCompactList}\small\item\em Start Form. \end{DoxyCompactList}\item 
+void \hyperlink{classHTMLTags_ab57baef28db9590ce59d0e2f403a210f}{Form\-End} ()
+\begin{DoxyCompactList}\small\item\em End Form. \end{DoxyCompactList}\item 
+void \hyperlink{classHTMLTags_a9d4bc37c7d615bc1d7f7c738dae48ad3}{Table\-Start} (string id, string class\-Name)
+\begin{DoxyCompactList}\small\item\em Start Table. \end{DoxyCompactList}\item 
+void \hyperlink{classHTMLTags_a0655d9f70a8c1a61c406280d8fb9df7a}{Table\-End} ()
+\begin{DoxyCompactList}\small\item\em End Table. \end{DoxyCompactList}\item 
+void \hyperlink{classHTMLTags_ab515d13346f63b00f7696374e682344e}{Input\-Field} (string type, string name, string value)
+\begin{DoxyCompactList}\small\item\em Input Field. \end{DoxyCompactList}\item 
+void \hyperlink{classHTMLTags_adb6e7ef0a1320dbf6d4acbe1ea3e418f}{Select\-Field\-Start} (string name)
+\begin{DoxyCompactList}\small\item\em Select Field Start. \end{DoxyCompactList}\item 
+void \hyperlink{classHTMLTags_adde967a90e03f4b5168b9bffd319980b}{Select\-Field\-End} ()
+\begin{DoxyCompactList}\small\item\em End Select Field. \end{DoxyCompactList}\item 
+void \hyperlink{classHTMLTags_a09f91c8601aed3aa2d0978123225afaa}{Select\-Option\-Start} (string value)
+\begin{DoxyCompactList}\small\item\em Select Option Start. \end{DoxyCompactList}\item 
+void \hyperlink{classHTMLTags_ae312980d20e3dea0469fdcb730fb975e}{Select\-Option\-End} ()
+\begin{DoxyCompactList}\small\item\em Selct Option End. \end{DoxyCompactList}\item 
+void \hyperlink{classHTMLTags_ab6dbb027d808e7b708a4ece7e911ceee}{Button} (string id, string type, string class\-Name, string value)
+\begin{DoxyCompactList}\small\item\em Button. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\subsection*{Protected Attributes}
+\begin{DoxyCompactItemize}
+\item 
+string \hyperlink{classHTMLTags_ae987289d0dab2e3e234048615f930d0f}{start\-H1}
+\begin{DoxyCompactList}\small\item\em H\-T\-M\-L Tag Variables for 
+
+, , 
+
+, etc. \end{DoxyCompactList}\item 
+\hypertarget{classHTMLTags_a708194dea85c068a24b7923254fd7458}{string {\bfseries end\-H1}}\label{classHTMLTags_a708194dea85c068a24b7923254fd7458}
+
+\item 
+\hypertarget{classHTMLTags_a9290221d987dfe55acd3d2002a48efa0}{string {\bfseries start\-H3}}\label{classHTMLTags_a9290221d987dfe55acd3d2002a48efa0}
+
+\item 
+\hypertarget{classHTMLTags_afa471891c94946ba4a68acd727246d66}{string {\bfseries end\-H3}}\label{classHTMLTags_afa471891c94946ba4a68acd727246d66}
+
+\item 
+\hypertarget{classHTMLTags_a827d77a9a5cc3c442421420f0713c17a}{string {\bfseries start\-T\-D}}\label{classHTMLTags_a827d77a9a5cc3c442421420f0713c17a}
+
+\item 
+\hypertarget{classHTMLTags_ac2f4aae38f9d88d90df443e1e59a5bfc}{string {\bfseries end\-T\-D}}\label{classHTMLTags_ac2f4aae38f9d88d90df443e1e59a5bfc}
+
+\item 
+\hypertarget{classHTMLTags_a71b8a6e9593c6744f75fe8fac83e39b7}{string {\bfseries start\-T\-H}}\label{classHTMLTags_a71b8a6e9593c6744f75fe8fac83e39b7}
+
+\item 
+\hypertarget{classHTMLTags_a12cc718fee6ac4d701aafa9bc6303ad3}{string {\bfseries end\-T\-H}}\label{classHTMLTags_a12cc718fee6ac4d701aafa9bc6303ad3}
+
+\item 
+\hypertarget{classHTMLTags_ae8ee5ce9589d18b36263d62c6aa30e0a}{string {\bfseries start\-T\-R}}\label{classHTMLTags_ae8ee5ce9589d18b36263d62c6aa30e0a}
+
+\item 
+\hypertarget{classHTMLTags_ae6b79efff5ed7c253a050a6179057942}{string {\bfseries end\-T\-R}}\label{classHTMLTags_ae6b79efff5ed7c253a050a6179057942}
+
+\item 
+\hypertarget{classHTMLTags_ac6dafb63a2da3f7500cc080fd43a324d}{string {\bfseries start\-B}}\label{classHTMLTags_ac6dafb63a2da3f7500cc080fd43a324d}
+
+\item 
+\hypertarget{classHTMLTags_a12fc9d60d71c585cfba1643dc93eb8fc}{string {\bfseries end\-B}}\label{classHTMLTags_a12fc9d60d71c585cfba1643dc93eb8fc}
+
 \end{DoxyCompactItemize}
 
 
@@ -40,6 +108,10 @@ void \hyperlink{classHTMLTags_a7cae36bd3a0e6f35e89494e5cda64971}{Body\-End} ()
 \subsection*{Include Header file }
 
 Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \subsection*{Description\-: Declaration}
+
+Definition at line 30 of file htmltags.\-h.
+
+
 
 \subsection{Constructor \& Destructor Documentation}
 \hypertarget{classHTMLTags_a4f0bb4f538b87033b574ff05798eb60b}{\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}!H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}}
@@ -49,11 +121,17 @@ Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \subsection*{Description\-:
 {}
 \end{DoxyParamCaption}
 )}}\label{classHTMLTags_a4f0bb4f538b87033b574ff05798eb60b}
-Constructor
+
+
+Constructor. 
 
 
 
  Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_a4f0bb4f538b87033b574ff05798eb60b}{H\-T\-M\-L\-Tags()} \subsubsection*{Description\-: Constructor}
+
+Definition at line 27 of file htmltags.\-cc.
+
+
 
 \subsection{Member Function Documentation}
 \hypertarget{classHTMLTags_a7cae36bd3a0e6f35e89494e5cda64971}{\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}!Body\-End@{Body\-End}}
@@ -63,99 +141,397 @@ Constructor
 {}
 \end{DoxyParamCaption}
 )}}\label{classHTMLTags_a7cae36bd3a0e6f35e89494e5cda64971}
-$<$/\-B\-O\-D\-Y$>$
+
+
+Display $<$/\-B\-O\-D\-Y$>$ 
 
 
 
- Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_a7cae36bd3a0e6f35e89494e5cda64971}{Body\-End()} \subsubsection*{Description\-: }\hypertarget{classHTMLTags_af1fb7b90b9ebb83177da18aba1ef86a9}{\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}!Body\-Start@{Body\-Start}}
+ Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_a7cae36bd3a0e6f35e89494e5cda64971}{Body\-End()} \subsubsection*{Description\-: Display }
+
+Definition at line 172 of file htmltags.\-cc.
+
+\hypertarget{classHTMLTags_af1fb7b90b9ebb83177da18aba1ef86a9}{\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}!Body\-Start@{Body\-Start}}
 \index{Body\-Start@{Body\-Start}!HTMLTags@{H\-T\-M\-L\-Tags}}
 \subsubsection[{Body\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Body\-Start (
 \begin{DoxyParamCaption}
 {}
 \end{DoxyParamCaption}
 )}}\label{classHTMLTags_af1fb7b90b9ebb83177da18aba1ef86a9}
-$<$\-B\-O\-D\-Y$>$
+
+
+Display $<$\-B\-O\-D\-Y$>$ 
 
 
 
- Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_af1fb7b90b9ebb83177da18aba1ef86a9}{Body\-Start()} \subsubsection*{Description\-: }\hypertarget{classHTMLTags_a4e9e18580cc7f2b82c82e4f81e39be50}{\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}!C\-S\-S@{C\-S\-S}}
+ Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_af1fb7b90b9ebb83177da18aba1ef86a9}{Body\-Start()} \subsubsection*{Description\-: Display }
+
+Definition at line 159 of file htmltags.\-cc.
+
+\hypertarget{classHTMLTags_ab6dbb027d808e7b708a4ece7e911ceee}{\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}!Button@{Button}}
+\index{Button@{Button}!HTMLTags@{H\-T\-M\-L\-Tags}}
+\subsubsection[{Button}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Button (
+\begin{DoxyParamCaption}
+\item[{string}]{id, }
+\item[{string}]{type, }
+\item[{string}]{class\-Name, }
+\item[{string}]{value}
+\end{DoxyParamCaption}
+)}}\label{classHTMLTags_ab6dbb027d808e7b708a4ece7e911ceee}
+
+
+Button. 
+
+
+
+ Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: Button(string id, string type, string class\-Name, string value) \subsubsection*{Description\-: Create button(next, submit, etc)}
+
+Definition at line 340 of file htmltags.\-cc.
+
+\hypertarget{classHTMLTags_a4e9e18580cc7f2b82c82e4f81e39be50}{\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}!C\-S\-S@{C\-S\-S}}
 \index{C\-S\-S@{C\-S\-S}!HTMLTags@{H\-T\-M\-L\-Tags}}
 \subsubsection[{C\-S\-S}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-C\-S\-S (
 \begin{DoxyParamCaption}
 \item[{string}]{href}
 \end{DoxyParamCaption}
 )}}\label{classHTMLTags_a4e9e18580cc7f2b82c82e4f81e39be50}
-Add External C\-S\-S
+
+
+Add External C\-S\-S. 
 
 
 
- Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_a4e9e18580cc7f2b82c82e4f81e39be50}{C\-S\-S(string href)} \subsubsection*{Description\-: Add External C\-S\-S file}\hypertarget{classHTMLTags_afdc779e46fac16cc79e4f0e87f621254}{\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}!Head\-End@{Head\-End}}
+ Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_a4e9e18580cc7f2b82c82e4f81e39be50}{C\-S\-S(string href)} \subsubsection*{Description\-: Add External C\-S\-S file}
+
+Definition at line 131 of file htmltags.\-cc.
+
+\hypertarget{classHTMLTags_aa82b2d3d85b3afd29e5641dbe1ace439}{\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}!Div\-End@{Div\-End}}
+\index{Div\-End@{Div\-End}!HTMLTags@{H\-T\-M\-L\-Tags}}
+\subsubsection[{Div\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Div\-End (
+\begin{DoxyParamCaption}
+{}
+\end{DoxyParamCaption}
+)}}\label{classHTMLTags_aa82b2d3d85b3afd29e5641dbe1ace439}
+
+
+End div section. 
+
+
+
+ Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_aa82b2d3d85b3afd29e5641dbe1ace439}{Div\-End()} \subsubsection*{Description\-: Close Div Section}
+
+Definition at line 199 of file htmltags.\-cc.
+
+\hypertarget{classHTMLTags_a897512b202cfd12729e8fa24e67ea4d6}{\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}!Div\-Start@{Div\-Start}}
+\index{Div\-Start@{Div\-Start}!HTMLTags@{H\-T\-M\-L\-Tags}}
+\subsubsection[{Div\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Div\-Start (
+\begin{DoxyParamCaption}
+\item[{string}]{id, }
+\item[{string}]{class\-Name}
+\end{DoxyParamCaption}
+)}}\label{classHTMLTags_a897512b202cfd12729e8fa24e67ea4d6}
+
+
+Start Div Section. 
+
+
+
+ Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_a897512b202cfd12729e8fa24e67ea4d6}{Div\-Start(string id, string class\-Name)} \subsubsection*{Description\-: Start Div Section with id and class\-Name(for C\-S\-S)}
+
+Definition at line 185 of file htmltags.\-cc.
+
+\hypertarget{classHTMLTags_ab57baef28db9590ce59d0e2f403a210f}{\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}!Form\-End@{Form\-End}}
+\index{Form\-End@{Form\-End}!HTMLTags@{H\-T\-M\-L\-Tags}}
+\subsubsection[{Form\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Form\-End (
+\begin{DoxyParamCaption}
+{}
+\end{DoxyParamCaption}
+)}}\label{classHTMLTags_ab57baef28db9590ce59d0e2f403a210f}
+
+
+End Form. 
+
+
+
+ Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_ab57baef28db9590ce59d0e2f403a210f}{Form\-End()} \subsubsection*{Description\-: Close Form}
+
+Definition at line 227 of file htmltags.\-cc.
+
+\hypertarget{classHTMLTags_a1489ccf4629069eca5e550eeb8e8e887}{\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}!Form\-Start@{Form\-Start}}
+\index{Form\-Start@{Form\-Start}!HTMLTags@{H\-T\-M\-L\-Tags}}
+\subsubsection[{Form\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Form\-Start (
+\begin{DoxyParamCaption}
+\item[{string}]{name, }
+\item[{string}]{action, }
+\item[{string}]{method}
+\end{DoxyParamCaption}
+)}}\label{classHTMLTags_a1489ccf4629069eca5e550eeb8e8e887}
+
+
+Start Form. 
+
+
+
+ Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: Form\-Start(string name, string action, string method) \subsubsection*{Description\-: Start Form with name, action and method(G\-E\-T/\-P\-O\-S\-T)}
+
+Definition at line 213 of file htmltags.\-cc.
+
+\hypertarget{classHTMLTags_afdc779e46fac16cc79e4f0e87f621254}{\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}!Head\-End@{Head\-End}}
 \index{Head\-End@{Head\-End}!HTMLTags@{H\-T\-M\-L\-Tags}}
 \subsubsection[{Head\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Head\-End (
 \begin{DoxyParamCaption}
 {}
 \end{DoxyParamCaption}
 )}}\label{classHTMLTags_afdc779e46fac16cc79e4f0e87f621254}
-$<$/\-H\-E\-A\-D$>$
+
+
+Display $<$/\-H\-E\-A\-D$>$ 
 
 
 
- Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_afdc779e46fac16cc79e4f0e87f621254}{Head\-End()} \subsubsection*{Description\-: Display }\hypertarget{classHTMLTags_af2b01cc08884af52e0b291d07035062e}{\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}!Head\-Start@{Head\-Start}}
+ Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_afdc779e46fac16cc79e4f0e87f621254}{Head\-End()} \subsubsection*{Description\-: Display }
+
+Definition at line 105 of file htmltags.\-cc.
+
+\hypertarget{classHTMLTags_af2b01cc08884af52e0b291d07035062e}{\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}!Head\-Start@{Head\-Start}}
 \index{Head\-Start@{Head\-Start}!HTMLTags@{H\-T\-M\-L\-Tags}}
 \subsubsection[{Head\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Head\-Start (
 \begin{DoxyParamCaption}
 {}
 \end{DoxyParamCaption}
 )}}\label{classHTMLTags_af2b01cc08884af52e0b291d07035062e}
-$<$\-H\-E\-A\-D$>$
 
 
+ Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_af2b01cc08884af52e0b291d07035062e}{Head\-Start()} \subsubsection*{Description\-: Display }
 
- Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_af2b01cc08884af52e0b291d07035062e}{Head\-Start()} \subsubsection*{Description\-: Display }\hypertarget{classHTMLTags_a6553c3d01ee194a1d157e6341333dee3}{\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}!H\-T\-M\-L\-End@{H\-T\-M\-L\-End}}
+Definition at line 92 of file htmltags.\-cc.
+
+\hypertarget{classHTMLTags_a6553c3d01ee194a1d157e6341333dee3}{\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}!H\-T\-M\-L\-End@{H\-T\-M\-L\-End}}
 \index{H\-T\-M\-L\-End@{H\-T\-M\-L\-End}!HTMLTags@{H\-T\-M\-L\-Tags}}
 \subsubsection[{H\-T\-M\-L\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-H\-T\-M\-L\-End (
 \begin{DoxyParamCaption}
 {}
 \end{DoxyParamCaption}
 )}}\label{classHTMLTags_a6553c3d01ee194a1d157e6341333dee3}
-$<$/\-H\-T\-M\-L$>$
+
+
+Display $<$/\-H\-T\-M\-L$>$ 
 
 
 
- Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_a6553c3d01ee194a1d157e6341333dee3}{H\-T\-M\-L\-End()} \subsubsection*{Description\-: Display }\hypertarget{classHTMLTags_a567551cd701d2836d4240b2917b5e13f}{\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}!H\-T\-M\-L\-Start@{H\-T\-M\-L\-Start}}
+ Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_a6553c3d01ee194a1d157e6341333dee3}{H\-T\-M\-L\-End()} \subsubsection*{Description\-: Display }
+
+Definition at line 79 of file htmltags.\-cc.
+
+\hypertarget{classHTMLTags_a567551cd701d2836d4240b2917b5e13f}{\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}!H\-T\-M\-L\-Start@{H\-T\-M\-L\-Start}}
 \index{H\-T\-M\-L\-Start@{H\-T\-M\-L\-Start}!HTMLTags@{H\-T\-M\-L\-Tags}}
 \subsubsection[{H\-T\-M\-L\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-H\-T\-M\-L\-Start (
 \begin{DoxyParamCaption}
 {}
 \end{DoxyParamCaption}
 )}}\label{classHTMLTags_a567551cd701d2836d4240b2917b5e13f}
-$<$\-H\-T\-M\-L$>$
+
+
+Display $<$\-H\-T\-M\-L$>$ 
 
 
 
- Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_a567551cd701d2836d4240b2917b5e13f}{H\-T\-M\-L\-Start()} \subsubsection*{Description\-: Display  Tag }\hypertarget{classHTMLTags_aea041d720f12a210615c95350774e6aa}{\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}!Javascript@{Javascript}}
+ Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_a567551cd701d2836d4240b2917b5e13f}{H\-T\-M\-L\-Start()} \subsubsection*{Description\-: Display  Tag }
+
+Definition at line 66 of file htmltags.\-cc.
+
+\hypertarget{classHTMLTags_ab515d13346f63b00f7696374e682344e}{\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}!Input\-Field@{Input\-Field}}
+\index{Input\-Field@{Input\-Field}!HTMLTags@{H\-T\-M\-L\-Tags}}
+\subsubsection[{Input\-Field}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Input\-Field (
+\begin{DoxyParamCaption}
+\item[{string}]{type, }
+\item[{string}]{name, }
+\item[{string}]{value}
+\end{DoxyParamCaption}
+)}}\label{classHTMLTags_ab515d13346f63b00f7696374e682344e}
+
+
+Input Field. 
+
+
+
+ Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: Input\-Field(string type, string name, string value) Description\-: Create Input fields like text field, submit \subsubsection*{button, etc.}
+
+Definition at line 269 of file htmltags.\-cc.
+
+\hypertarget{classHTMLTags_aea041d720f12a210615c95350774e6aa}{\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}!Javascript@{Javascript}}
 \index{Javascript@{Javascript}!HTMLTags@{H\-T\-M\-L\-Tags}}
 \subsubsection[{Javascript}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Javascript (
 \begin{DoxyParamCaption}
 \item[{string}]{src}
 \end{DoxyParamCaption}
 )}}\label{classHTMLTags_aea041d720f12a210615c95350774e6aa}
-Add Javascript File
+
+
+Add Javascript File. 
 
 
 
- Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_aea041d720f12a210615c95350774e6aa}{Javascript(string src)} \subsubsection*{Description\-: Add external Javascript file}\hypertarget{classHTMLTags_a5128d6f1c6be5ac1689047fc9d0d159f}{\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}!Title@{Title}}
+ Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_aea041d720f12a210615c95350774e6aa}{Javascript(string src)} \subsubsection*{Description\-: Add external Javascript file}
+
+Definition at line 146 of file htmltags.\-cc.
+
+\hypertarget{classHTMLTags_adde967a90e03f4b5168b9bffd319980b}{\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}!Select\-Field\-End@{Select\-Field\-End}}
+\index{Select\-Field\-End@{Select\-Field\-End}!HTMLTags@{H\-T\-M\-L\-Tags}}
+\subsubsection[{Select\-Field\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Select\-Field\-End (
+\begin{DoxyParamCaption}
+{}
+\end{DoxyParamCaption}
+)}}\label{classHTMLTags_adde967a90e03f4b5168b9bffd319980b}
+
+
+End Select Field. 
+
+
+
+ Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_adde967a90e03f4b5168b9bffd319980b}{Select\-Field\-End()} \subsubsection*{Description\-: Close select field}
+
+Definition at line 296 of file htmltags.\-cc.
+
+\hypertarget{classHTMLTags_adb6e7ef0a1320dbf6d4acbe1ea3e418f}{\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}!Select\-Field\-Start@{Select\-Field\-Start}}
+\index{Select\-Field\-Start@{Select\-Field\-Start}!HTMLTags@{H\-T\-M\-L\-Tags}}
+\subsubsection[{Select\-Field\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Select\-Field\-Start (
+\begin{DoxyParamCaption}
+\item[{string}]{name}
+\end{DoxyParamCaption}
+)}}\label{classHTMLTags_adb6e7ef0a1320dbf6d4acbe1ea3e418f}
+
+
+Select Field Start. 
+
+
+
+ Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_adb6e7ef0a1320dbf6d4acbe1ea3e418f}{Select\-Field\-Start(string name)} \subsubsection*{Description\-: Create Select Field}
+
+Definition at line 283 of file htmltags.\-cc.
+
+\hypertarget{classHTMLTags_ae312980d20e3dea0469fdcb730fb975e}{\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}!Select\-Option\-End@{Select\-Option\-End}}
+\index{Select\-Option\-End@{Select\-Option\-End}!HTMLTags@{H\-T\-M\-L\-Tags}}
+\subsubsection[{Select\-Option\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Select\-Option\-End (
+\begin{DoxyParamCaption}
+{}
+\end{DoxyParamCaption}
+)}}\label{classHTMLTags_ae312980d20e3dea0469fdcb730fb975e}
+
+
+Selct Option End. 
+
+
+
+ Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_ae312980d20e3dea0469fdcb730fb975e}{Select\-Option\-End()} \subsubsection*{Description\-: Close select option}
+
+Definition at line 326 of file htmltags.\-cc.
+
+\hypertarget{classHTMLTags_a09f91c8601aed3aa2d0978123225afaa}{\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}!Select\-Option\-Start@{Select\-Option\-Start}}
+\index{Select\-Option\-Start@{Select\-Option\-Start}!HTMLTags@{H\-T\-M\-L\-Tags}}
+\subsubsection[{Select\-Option\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Select\-Option\-Start (
+\begin{DoxyParamCaption}
+\item[{string}]{value}
+\end{DoxyParamCaption}
+)}}\label{classHTMLTags_a09f91c8601aed3aa2d0978123225afaa}
+
+
+Select Option Start. 
+
+
+
+ Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: Select\-Option\-Start(string value, string selected) \subsubsection*{Description\-: Options for select }
+
+Definition at line 310 of file htmltags.\-cc.
+
+\hypertarget{classHTMLTags_abe32ec84b6b2940afbc993be2db178e9}{\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}!Set\-H\-T\-M\-L\-Variables@{Set\-H\-T\-M\-L\-Variables}}
+\index{Set\-H\-T\-M\-L\-Variables@{Set\-H\-T\-M\-L\-Variables}!HTMLTags@{H\-T\-M\-L\-Tags}}
+\subsubsection[{Set\-H\-T\-M\-L\-Variables}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Set\-H\-T\-M\-L\-Variables (
+\begin{DoxyParamCaption}
+{}
+\end{DoxyParamCaption}
+)}}\label{classHTMLTags_abe32ec84b6b2940afbc993be2db178e9}
+
+
+Assingn Values to variables. 
+
+
+
+ Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_abe32ec84b6b2940afbc993be2db178e9}{Set\-H\-T\-M\-L\-Variables()} Description\-: Set values of common H\-T\-M\-L tags in respective \subsubsection*{variables.}
+
+Definition at line 42 of file htmltags.\-cc.
+
+\hypertarget{classHTMLTags_a0655d9f70a8c1a61c406280d8fb9df7a}{\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}!Table\-End@{Table\-End}}
+\index{Table\-End@{Table\-End}!HTMLTags@{H\-T\-M\-L\-Tags}}
+\subsubsection[{Table\-End}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Table\-End (
+\begin{DoxyParamCaption}
+{}
+\end{DoxyParamCaption}
+)}}\label{classHTMLTags_a0655d9f70a8c1a61c406280d8fb9df7a}
+
+
+End Table. 
+
+
+
+ Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_a0655d9f70a8c1a61c406280d8fb9df7a}{Table\-End()} \subsubsection*{Description\-: Close Table tag}
+
+Definition at line 254 of file htmltags.\-cc.
+
+\hypertarget{classHTMLTags_a9d4bc37c7d615bc1d7f7c738dae48ad3}{\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}!Table\-Start@{Table\-Start}}
+\index{Table\-Start@{Table\-Start}!HTMLTags@{H\-T\-M\-L\-Tags}}
+\subsubsection[{Table\-Start}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Table\-Start (
+\begin{DoxyParamCaption}
+\item[{string}]{id, }
+\item[{string}]{class\-Name}
+\end{DoxyParamCaption}
+)}}\label{classHTMLTags_a9d4bc37c7d615bc1d7f7c738dae48ad3}
+
+
+Start Table. 
+
+
+
+ Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_a9d4bc37c7d615bc1d7f7c738dae48ad3}{Table\-Start(string id, string class\-Name)} \subsubsection*{Description\-: Start Table with id and class\-Name(\-C\-S\-S) attributes}
+
+Definition at line 240 of file htmltags.\-cc.
+
+\hypertarget{classHTMLTags_a5128d6f1c6be5ac1689047fc9d0d159f}{\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}!Title@{Title}}
 \index{Title@{Title}!HTMLTags@{H\-T\-M\-L\-Tags}}
 \subsubsection[{Title}]{\setlength{\rightskip}{0pt plus 5cm}void H\-T\-M\-L\-Tags\-::\-Title (
 \begin{DoxyParamCaption}
 \item[{string}]{page\-Title}
 \end{DoxyParamCaption}
 )}}\label{classHTMLTags_a5128d6f1c6be5ac1689047fc9d0d159f}
-$<$\-T\-I\-T\-L\-E$>$ $<$/\-T\-I\-T\-L\-E$>$
+
+
+Display $<$\-T\-I\-T\-L\-E$>$ $<$/\-T\-I\-T\-L\-E$>$ 
 
 
 
  Class\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} Method\-: \hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} \-:\-: \hyperlink{classHTMLTags_a5128d6f1c6be5ac1689047fc9d0d159f}{Title(string page\-Title)} \subsubsection*{Description\-: Display Page Tile}
+
+Definition at line 118 of file htmltags.\-cc.
+
+
+
+\subsection{Member Data Documentation}
+\hypertarget{classHTMLTags_ae987289d0dab2e3e234048615f930d0f}{\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}!start\-H1@{start\-H1}}
+\index{start\-H1@{start\-H1}!HTMLTags@{H\-T\-M\-L\-Tags}}
+\subsubsection[{start\-H1}]{\setlength{\rightskip}{0pt plus 5cm}string H\-T\-M\-L\-Tags\-::start\-H1\hspace{0.3cm}{\ttfamily [protected]}}}\label{classHTMLTags_ae987289d0dab2e3e234048615f930d0f}
+
+
+H\-T\-M\-L Tag Variables for 
+
+, , 
+
+, etc. 
+
+
+
+Definition at line 36 of file htmltags.\-h.
+
+
 
 The documentation for this class was generated from the following files\-:\begin{DoxyCompactItemize}
 \item 
