--- a/Documentation/latex/dir_68267d1309a1af8e8297ef4c3efbcdba.tex
+++ b/Documentation/latex/dir_68267d1309a1af8e8297ef4c3efbcdba.tex
@@ -4,13 +4,37 @@
 \subsection*{Files}
 \begin{DoxyCompactItemize}
 \item 
+file {\bfseries cgicc.\-h}
+\item 
+file {\bfseries classdetails.\-cc}
+\item 
+file {\bfseries classdetails.\-h}
+\item 
+file {\bfseries filenames.\-h}
+\item 
 file {\bfseries header.\-h}
 \item 
 file {\bfseries htmltags.\-cc}
 \item 
 file {\bfseries htmltags.\-h}
 \item 
+file {\bfseries inputfieldnames.\-cc}
+\item 
+file {\bfseries inputfieldnames.\-h}
+\item 
 file {\bfseries pagelayout.\-cc}
 \item 
 file {\bfseries pagelayout.\-h}
+\item 
+file {\bfseries readinputfields.\-cc}
+\item 
+file {\bfseries readinputfields.\-h}
+\item 
+file {\bfseries rollnodetails.\-cc}
+\item 
+file {\bfseries rollnodetails.\-h}
+\item 
+file {\bfseries roomdetails.\-cc}
+\item 
+file {\bfseries roomdetails.\-h}
 \end{DoxyCompactItemize}
