--- a/Documentation/latex/hierarchy.tex
+++ b/Documentation/latex/hierarchy.tex
@@ -3,5 +3,10 @@ This inheritance list is sorted roughly, but not completely, alphabetically\-:\b
 \item \contentsline{section}{H\-T\-M\-L\-Tags}{\pageref{classHTMLTags}}{}
 \begin{DoxyCompactList}
 \item \contentsline{section}{Page\-Layout}{\pageref{classPageLayout}}{}
+\begin{DoxyCompactList}
+\item \contentsline{section}{Class\-Details}{\pageref{classClassDetails}}{}
 \end{DoxyCompactList}
+\end{DoxyCompactList}
+\item \contentsline{section}{Input\-Field\-Names}{\pageref{classInputFieldNames}}{}
+\item \contentsline{section}{Read\-Input\-Fields}{\pageref{classReadInputFields}}{}
 \end{DoxyCompactList}
